# bazel-jdt-java-toolchain

./: .bazelrc  BUILD  MODULE.bazel  README.md
.github/workflows/: ci.yml  main.yml  release.yml  tagged_release.yml
compiler/: BUILD
compiler/src/main/protobuf/: BUILD
examples/: .bazelrc  BUILD  MODULE.bazel  maven_install.json
examples/java/: BUILD
examples/java/example/test/: used_deps_test.sh
examples/source-target-toolchains/: BUILD
test-bazel/: toolchains-query-format.scl  toolchains-query.sh
